# ureport

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  COPILOT_SETUP.md  DATABASE_OPTIMIZATION_SUMMARY.md  README-WENI.md  README.md  app-entrypoint.sh  code_check.py  docker-entrypoint.sh  fabconfig.py  fabfile.py  gunicorn.conf.py  manage.py  nginx.conf  package-lock.json  package.json  pip-freeze.txt  pip-requires.txt  postcss.config.js  pre-commit.sh  pyproject.toml  setup.cfg  supervisor-app.conf  tailwind.config.js  test-freeze.txt  test_copilot_setup.py  varnish.default.vcl  webpack.config.js  weni_requirements.txt
.github/workflows/: build-ureport-push-tag-shared.yaml  ci.yml
config/: 404.html  celery.conf  error.html  nginx.conf  supervisor.conf  sync.conf
dash/: dash_email.py
dash/api/: __init__.py
dash/dashblocks/: admin.py  models.py  urls.py  views.py
dash/orgs/: context_processors.py  middleware.py  models.py  tasks.py  tests.py  urls.py  views.py
dash/stories/: models.py  urls.py  views.py
dash/users/: urls.py  views.py
docker/: Dockerfile  docker-compose.yml
locale/sr_Latn/: django.po
media/geojson/: countries.json
media/test_imports/: polls.csv
static/: base.html
static/coffee/: all_polls.coffee  archived_stories.coffee  featured_region.coffee  featured_stories.coffee  locations.coffee  locations_v2.coffee  resize.coffee  ureport.coffee  ureporters.coffee  ureporters_v2.coffee  v2_age.coffee  v2_countries.coffee  v2_fb_share.coffee  v2_locations.coffee  v2_polls.coffee  v2_scheme.coffee  v2_scheme_bar.coffee  v2_search.coffee
static/css/: bootstrap-theme.css  bootstrap.css  jqcloud.css  leaflet.css  social-icons.css  tailwind.css
static/fonts/: SharpSansDispNo1-Bold.eot  SharpSansDispNo1-BoldIt.eot  SharpSansDispNo1-Medium.eot  SharpSansDispNo1-MediumIt.eot  SharpSansNo1-Bold.eot
static/js/: all_polls.js  aos.js  archived_stories.js  featured_region.js  featured_stories.js  gradientfactory.js  html2canvas.min.js  leaflet.js  locations.js  locations_v2.js  ureport.js  ureporters.js  ureporters_v2.js  v2_age.js  v2_countries.js  v2_fb_share.js  v2_locations.js  v2_polls.js  v2_scheme.js  v2_scheme_bar.js  v2_search.js  wysihtml5-advanced.js
static/less/: styles.less  styles_public.less  styles_uk.less  ureport-rtl.less  ureport.less  ureport2.less
static/scss/: tailwind.scss
templates/: 404.html  500.html  base_admin_dashboard.haml  base_admin_dashboard.html  email_base.html  frame.haml  frame.html  frame_v2.haml  public_base.haml  public_base.html  public_base_v2.haml  public_base_v2_old.haml
templates/bots/: bot_create.haml  bot_update.haml
templates/categories/: category_list.haml  category_list.html  categoryimage_list.haml  categoryimage_list.html
templates/dashblocks/: dashblock_about_pages.haml  dashblock_form.haml  dashblock_form.html  dashblock_join_engage_pages.haml  dashblock_list.haml  dashblock_list.html  dashblock_update.haml  dashblock_ureporters_pages.haml  dashblock_youtube_videos.haml
templates/drf-yasg/: swagger-ui.html
templates/jobs/: jobsource_create.haml  jobsource_create.html  jobsource_update.haml
templates/landingpages/: landingpage_create.haml  landingpage_create.html  landingpage_update.haml  landingpage_update.html
templates/org_ext/: org_home.haml  org_manage_accounts.haml
templates/orgs/: org_edit.haml  org_edit.html  org_home.haml  org_home.html  org_manage_accounts.haml  org_manage_accounts.html
templates/policies/: policy_admin.haml  policy_read.haml
templates/polls/: poll_create.haml  poll_create.html  poll_images.haml  poll_images.html  poll_list.haml  poll_list.html  poll_questions.haml  poll_questions.html  poll_responses.haml  poll_responses.html  poll_update.haml  poll_update.html
templates/public/: about.haml  about.html  additional_menu.haml  all_polls.haml  all_polls.html  archived_stories.haml  archived_stories.html  bots.haml  bots.html  custom_page.haml  custom_page.html  edit_content.haml  edit_content.html  featured_region.html  icons.haml  icons.html  index.haml  index.html  jobs.haml  jobs.html  join_engage.haml  join_engage.html  landing_page.haml  landing_page.html  mobile_age_include.haml  mobile_age_include.html  mobile_gender_include.haml  mobile_gender_include.html  org_chooser.haml  org_chooser.html  org_flags.haml  org_flags.html  policies.haml  poll_base.haml  poll_keyword.haml  poll_location.haml  poll_statistics.haml  polls.haml  polls.html  recent_polls.haml  (+10 more)
templates/public_v2/: about.haml  additional_menu.haml  all_polls.haml  archived_stories.haml  index.haml  index_old.haml  jobs.haml  join_engage.haml  polls.haml  stories.haml  story_read.haml  strings_values.haml  ureporters.haml
templates/rest_framework/: base.html
templates/rest_framework_swagger/: base.html  index.html
templates/smartmin/: base.haml  base.html  create.haml  delete_confirm.haml  delete_confirm.html  field.haml  field.html  form.haml  form.html  list.haml  list.html  read.html  update.haml  update.html
templates/stories/: story_create.haml  story_create.html  story_list.haml  story_list.html  story_update.haml  story_update.html
testfiles/: poll_11_12.json  poll_12_0_0.json
ureport/: __init__.py  celery.py  settings.py  settings.py.dev  settings.py.devprod  settings.py.postgres  settings.py.prod  settings.py.staging  settings_common.py  tests.py  translation.py  urls.py  wsgi.py
ureport/admins/: __init__.py  models.py  tasks.py  tests.py  urls.py  views.py
ureport/api/: __init__.py  models.py  permissions.py  serializers.py  swagger.py  tests.py  urls.py  views.py
ureport/assets/: context_processors.py  models.py  tests.py  urls.py  views.py
ureport/backend/: __init__.py  floip.py  rapidpro.py
ureport/bots/: models.py  tests.py  urls.py  views.py
ureport/categories/: models.py  urls.py  views.py
ureport/contacts/: models.py  tasks.py  tests.py  views.py
ureport/countries/: models.py  tests.py  urls.py  views.py
ureport/flows/: models.py
ureport/jobs/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
(+531 files in other folders)
