[tool.poetry]
name = "ureport"
version = "1.2.82"
description = "U-Report dashboard built on data collected by RapidPro"
authors = ["Nyaruka Ltd <code@nyaruka.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.0"
smartmin = "^4.2.4"
rapidpro-dash = "^1.14.1"
colorama = "^0.4.3"
celery = "^5.1"
django-compressor = "^4.0"
django-debug-toolbar = "3.2.4"
django-digest = "^1.13"
django-rosetta = "^0.8.1"
django-storages = "^1.13.2"
django-rest-swagger = "^2.2.0"
djangorestframework = "3.14.0"
dj-database-url = "^0.5.0"
Pillow = "^10.0.1"
gunicorn = "^20.1.0"
sentry-sdk = "^1.18.0"
django-redis = "^5.2.0"
psycopg = "^3.1.9"
xlutils = "^2.0.0"
mock = "^2.0.0"
pycountry = "^18.5.26"
django-countries = "^7.2.1"
regex = "^2023.8.8"
rapidpro-python = "^2.12.0"
feedparser = "^6.0.2"
Markdown = "^2.6.11"
iso8601 = "^0.1.12"
sorl-thumbnail = "^12.9.0"
stop_words = "^2018.7.23"
boto3 = "^1.27.1"


[tool.poetry.dev-dependencies]
black = "^23.1"
isort = "^5.11.0"
coverage = {extras = ["toml"], version = "^7.2.2"}
ruff = "^0.0.253"
djlint = "^1.32.1"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501", "F405"]
fix = true
exclude = ["./.tox/*", "./.venv/*", "./env/*", "*/migrations/*", "./build/*"]

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 119
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]

[tool.coverage.run]
source = ["ureport"]

[tool.coverage.report]
omit = ["*/migrations/*", "*/tests*", "*__init__*", "*settings*", "*management/commands*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
