[project]
name = "ureport"
version = "1.2.169"
description = "U-Report dashboard built on data collected by RapidPro"
authors = [
    {"name" = "Nyaruka", "email" = "code@nyaruka.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "smartmin (>=5.2.2,<6.0.0)",
    "rapidpro-dash (>=1.19.0,<2.0.0)",
    "colorama ~= 0.4.3",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "django-compressor ~= 4.0",
    "django-debug-toolbar ~= 4.4.6",
    "django-digest ~= 1.13",
    "django-rosetta ~= 0.10.1",
    "django-storages ~= 1.14.4",
    "djangorestframework ~= 3.15.2",
    "dj-database-url ~= 2.3.0",
    "Pillow ~= 10.4.0",
    "gunicorn ~= 23.0.0",
    "sentry-sdk ~= 2.19.2",
    "psycopg ~= 3.2.3",
    "xlutils ~= 2.0.0",
    "mock ~= 5.1.0",
    "pycountry >= 24.5.1",
    "django-countries ~= 7.6.1",
    "regex ~= 2024.11.6",
    "rapidpro-python (>=2.21.0,<3.0.0)",
    "feedparser ~= 6.0.2",
    "Markdown ~= 3.7",
    "iso8601 ~= 0.1.12",
    "sorl-thumbnail ~= 12.11.0",
    "stop_words ~= 2018.7.23",
    "boto3 >= 1.27.1",
    "drf-yasg ~= 1.21.8",
    "django-valkey (>=0.2.1,<0.3.0)",
]


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
coverage = {extras = ["toml"], version = "^7.2.2"}
ruff = "^0.3.3"
djlint = "^1.34.1"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W"]
lint.ignore = ["E501", "F405"]
fix = true
exclude = ["./.tox/*", "./.venv/*", "./env/*", "*/migrations/*", "./build/*"]

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 119
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]

[tool.djlint]
blank_line_after_tag = "load"
custom_blocks = "render"
format_css = true
format_js = true
ignore = "H006,H019,H021,H023"
indent = 2
max_attribute_length = 100
max_line_length = 200

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
templating = "django"


[tool.coverage.run]
source = ["ureport"]

[tool.coverage.report]
omit = ["*/migrations/*", "*/tests*", "*__init__*", "*settings*", "*management/commands*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"